# magnetcontrol_ws

./: bronchial_obstacle_map.mat  mscr_live_results.csv  mscr_live_results2.csv  mscr_live_results3.csv  mscr_live_results4.csv  mscr_live_results5.csv  prm_lung.m  prm_lungv3.m  prm_lungv4.m  prm_roadmap.mat
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/magnet_control/lib/magnet_control/: inv_norm3.mat  lung_navigation_sim  move_waypoints  mscr_inverse_model.onnx  mscr_raw
install/magnet_control/share/magnet_control/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/magnet_control/lib/magnet_control/: inv_norm3.mat  mscr_inv_control  mscr_inv_cosserat  mscr_inverse_model.onnx
src/install/magnet_control/share/magnet_control/: package.sh  package.xml
src/log/: latest_build
src/magnet_control/: package.xml  setup.py
src/magnet_control/config/: ur5e_controllers.yaml
src/magnet_control/launch/: ur5e_airway_sim.launch.py
src/magnet_control/magnet_control/: inv_norm3.mat  lung_navigation_sim.py  move_waypoints.py  mscr_inv_control.py  mscr_inv_cosserat.py  mscr_inverse_model.onnx  mscr_raw.py  ur5e_airway_navigation.py  ur5e_airway_sim_standalone.py
src/magnet_control/magnet_control/install/: local_setup.sh  setup.sh
src/magnet_control/magnet_control/log/: latest_build
src/magnet_control/urdf/: ur5e_magnet.urdf.xacro
src/magnet_control/worlds/: bronchial_airway.world
